react-frontend/src/pages/pages.css
/* ... */
.col16 {
    width: 68vw;
}

#col8 {
    height: 20vh;
}

.img_wrapper {
    overflow: hidden;
    position: relative;
    
}

.background_img {
    opacity: 0.4;
    position: absolute;
    left: 0;
    top: 0;
    max-width: 300%;
    max-height: 500%;
    width: 130%;
    z-index: 0;
}

/*Text styling---------------*/

.highlightedText {
    margin: 0;
    display: block;
    color: #80ED99 !important;
}

p {
    color: #DDCFBE !important;
}

td {
    color: antiquewhite !important;
}

h2 {
    color: antiquewhite !important;
    display: flex;
    text-align: center;
}

h1 {
    color: black !important;
}

li {
    color: antiquewhite;
}

/*Footer---------------*/

#footerWrapper {
    color: #122640;
    display: flex;
    align-items: center;
    justify-content: center;
    height: inherit;
    font-size: 3rem;
    font-weight: 700;
}

#credits {
    margin: 0 !important;
}

/*---------------*/

#title {
    font-family: Verdana, Geneva, sans-serif;
    font-size: 7rem;
    font-weight: 700;
    line-height: 100%;
    color: antiquewhite !important;
    filter: drop-shadow(5px 5px 15px black);
    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
    text-align: center;
    align-self: end;
    margin-top: -15vh;
}

#titelDiv {
    padding-top: 2rem;
    display: grid;
    align-items: center;
    /*grid-template-rows: 1.5fr 1fr;*/
    gap: 5px;
    height: 80vh;
}

#topic {
    color: #122640;
    font-size: 1.5rem;
    font-weight: 700;
}

/*Buttons---------------*/

#contentLink {
    display: grid;
    height: 100%;
}

#startButton {
    background-color: #7E97B8;
    color: antiquewhite;
    border-color: antiquewhite;
    border-width: 3px;
    justify-self: center;
    align-items: center;
    text-align: center;
    font-size: 1.25rem;
    font-weight: 500;
    height: 2.5rem;
    width: 15rem;
    margin-top: -15vh;
}

#startButton:hover {
    background-color: #55677D;
    border-color: #55677D;
}

#attributionsButton {
    background-color: #7E97B8;
    color: antiquewhite;
    border-color: antiquewhite;
    border-width: 3px;
    justify-self: center;
    align-items: center;
    text-align: center;
    margin-top: 2px;
    font-size: 1rem;
    font-weight: 500;
    height: 2rem;
    width: 7.5rem;
    margin-top: -35vh;
}

#attributionsButton:hover {
    background-color: #55677D;
    border-color: #55677D;
}


/*Maps styling---------------*/

.leaflet-container {
    border-radius: 8px 8px 8px 8px;
}

.leaflet-container a{
    display: flex !important;
    justify-content: center;
    align-items: center;
    text-align: center !important;
}

.leaflet-container div{
    border: none !important;
    height: 15%;
    background: none;
}

.leaflet-container a:last-child{
    border-bottom: 1px solid !important;
    border-color: hsl(195, 85%, 41%) !important;
}

g {
    opacity: 0.5;
}


h5 {
    color: #122640;
}

#landingPage {
    height: 100vh;
    .div{
        align-items: center;
    }

    .layer.background{
        position: fixed;
        z-index: 1;
        opacity: 0.6;
    }

    .layer.front{
        position: relative;
        z-index: 100;
    }
}

/*---------------*/

#leftGreen{
    background-color: green;
    margin-left: 228px;
    margin-top: 5px;
    border-radius: 50%;
    height: 1.5rem;
    width: 1.5rem;
    z-index: 5;
    opacity: 0.9;
    animation:21s 5s ease-in-out infinite greenTrain-in;
}

@keyframes greenTrain-in {
    0% {
        transform: translateY(0) translateX(0);
      }
      14% {
        transform: translateY(113px) translateX(0);
      }
      28% {
        transform: translateY(114px) translateX(132px);
      }
      42% {
        transform: translateY(250px) translateX(132px);
      }
      56% {
        transform: translateY(250px) translateX(-112px);
      }
      70% {
        transform: translateY(440px) translateX(-112px);
      }
      84% {
        transform: translateY(440px) translateX(-16px);
      }
      98% {
        transform: translateY(520px) translateX(-16px);
        opacity: 0.9;
      }
      100% {
        opacity: 0;
      }
  }


/* contentPage------------------------------*/

#contentPage {
    height: 550vh;
}

.page {
    padding: 5rem 2rem 0rem 2rem;
}

/*titel Page---------------*/

#titelPage {
    color: antiquewhite;
    height: 100vh;
    display: grid;
}

#homeButton {
    display: flex;
    flex-direction: row;
    position: absolute;
    top: 3rem !important;
    left: 3rem !important;
}

#homeImg {
    height: 3rem;
    width: 3rem;
}

#contentTitel {
    position:absolute;
    font-size: 150px;
    top: 40%;
    left: 40%;
    color:antiquewhite !important;
    z-index: 10;
    margin-top: -5vh;
    margin-left: -2vw;
}

#zurichVideo {
    position:relative;
    height: 100vh;
    width: 100%;
    opacity: 0.7;
    object-fit: cover;
}

/*population Page---------------*/

#popPage {
    height: 100vh;
}

#population-map {
    height: 100%;
    width: 100%;

    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    column-gap: 3rem;
    grid-template-areas:
        "map description" 
        "map checkbox"
        "map infobox";
    
    .leaflet-container {
        grid-area: map;
        height: 90% !important;
        width: 100% !important;
    }

    #populationTitel {
        grid-area: description;
    }

    #swisstopoCheckbox {
        grid-area: checkbox;
    }
    
    #infoBox {
        grid-area: infobox;
    }

    #populationTitel {
        grid-area: description;
        display: block;
        margin: 0;
    }
}

#swissTopoCheckboxDiv {
    text-align: center;

    #swisstopoCheckbox {
        display: flex;
        align-items: center;
        justify-content: center;
    }

    #swisstopoCheckbox p {
        margin: 0;
    }
}
/* ... */

